# ccache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_xcode.sh
cmake/: cmake_uninstall.cmake.in  utils.cmake
configure/: configure.h.in
samples/: AppDelegate.h  AppDelegate.m  config.yaml  main.m
samples/ccache-sample/: .gitignore  Podfile  ViewController.s  args.txt
samples/ccache-sample/Kit/: Kit.h  KitObject.h  KitObject.m
samples/ccache-sample/ccache/: ccache  ccache-clang  ccache-clang++
samples/ccache-sample/ccache-sample/: AppDelegate.h  AppDelegate.m  Config.xcconfig  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
samples/ccache-sample/ccache-sample.xcodeproj/: project.pbxproj
samples/ccache-sample/ccache-sample.xcodeproj/xcshareddata/xcschemes/: ccache-sample.xcscheme
samples/ccache-sample/ccache-sample.xcworkspace/: contents.xcworkspacedata
src/: Args.cpp  Args.hpp  ArgsInfo.cpp  ArgsInfo.hpp  DigestCalculate.cpp  DigestCalculate.hpp  Fd.cpp  Fd.hpp  Finalizer.hpp  MiniTrace.cpp  MiniTrace.hpp  NonCopyable.hpp  ProjectConfig.cpp  ProjectConfig.hpp  Util.cpp  Util.hpp  args.hpp  assertions.cpp  assertions.hpp  ccache.cpp  ccache.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  context.cpp  context.hpp  env_key.h  execute.cpp  execute.hpp  fmtmacros.hpp  key_calculate.cpp  key_calculate.hpp  main.cpp  temporaryFile.cpp  temporaryFile.hpp
